[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/main/save_or_discard_dialog.gd" type="Script" id=1]

[node name="WindowDialog" type="WindowDialog"]
margin_right = 200.0
margin_bottom = 100.0
window_title = "Save Changes?"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 200.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Save Changes?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 200.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 53.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Save"

[node name="Discard" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 63.0
margin_right = 123.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Discard"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 133.0
margin_right = 187.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Discard" to="." method="_on_Discard_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
